FreedomSanboxAntDeploy/src/objects/Checklist_Template__c.object
<CustomObject>
    <fields>
        <fullName>Checklist_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Checklist Template</label>
        <referenceTo>Checklist_Template__c</referenceTo>
        <relationshipLabel>Checklist Template Steps</relationshipLabel>
        <relationshipName>Checklist_Templates</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Context__c</fullName>
        <label>Context</label>
        <picklist>
            <controllingField>Stage__c</controllingField>
            <picklistValues>
                <fullName>Prospecting-Initation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Educating Client</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Agreement-Signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment-Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>fllow-up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Collection Over stretching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Reivew</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Creation-Initiated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DraftPlan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Accepted</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Interaction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consolidated Account Statement Send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Client-Communication</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Adhoc/ Periodic requirement from the internel team for analysis purpose</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Updated</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Yearly Review</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Annual client meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assignment-send</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Renewal Agreement-signed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment Received</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reason of Leaving</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Net_Due_Date__c</fullName>
        <label>Net Due Date</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Sequence__c</fullName>
        <label>Sequence</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <picklist>
            <picklistValues>
                <fullName>Prospecting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Will-join-Later</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data-Collection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan_creation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan_Execution</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan_Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan_Reviewing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Customer</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Status_Indicator__c</fullName>
        <formula>IF( ISPICKVAL( Step_Status__c , &quot;Not Started&quot;) , 
IMAGE(&quot;/img/samples/color_red.gif&quot;, &quot;red&quot;, 10, 10), 
IF( ISPICKVAL(Step_Status__c, &quot;In Process&quot;) , 
IMAGE(&quot;/img/samples/color_yellow.gif&quot;, &quot;yellow&quot;, 10, 10), 
IMAGE(&quot;/img/samples/color_green.gif&quot;, &quot;green&quot;, 10, 10) 
) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status Indicator</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Step_No__c</fullName>
        <label>Step No</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Step_Status__c</fullName>
        <label>Step Status</label>
        <picklist>
            <picklistValues>
                <fullName>Not Started</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Checklist Template</label>
    <nameField>
        <label>Checklist Template Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Checklist Templates</pluralLabel>
    <recordTypes>
        <fullName>Steps</fullName>
        <active>true</active>
        <description>Check List Steps in the Template</description>
        <label>Steps</label>
    </recordTypes>
    <recordTypes>
        <fullName>Template</fullName>
        <active>true</active>
        <description>Check List Template fields</description>
        <label>Template</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>